[sbt shell] preserve JVM option operands from .jvmopts (without dash `-`) (#SCL-22898, #SCL-22803) fixed
JvmOptionsCollector parsed JAVA_OPTS and .jvmopts into tokens, but then kept only tokens starting with "-".
That dropped separate operands for JVM options such as --add-exports and --add-modules, so the Java process saw the option without its required module/export value and failed during startup.

Keep all non-empty parsed tokens after quote/comment preprocessing to match sbt launcher behavior.
Add resolver, shell VM builder, and integration coverage so both separate-process and sbt-shell launches receive complete option/operand pairs.

Historical note: the dash-only filtering dates back to #SCL-14242, where `.jvmopts`
comment lines accidentally reached option parsing and broke sbt import.
At that time, keeping only lines starting with `-` was a simple way to skip comments.

That assumption is no longer needed: comments and quoted `#` characters are now
handled explicitly by `CommentsAndQuotesPreprocessor` before token parsing.
The dash filter became harmful because modern JVM options can have required operands
as separate non-dash tokens, for example `--add-modules` followed by `java.base`.

Co-authored-by: Codex <noreply@openai.com>